[gd_scene load_steps=4 format=3 uid="uid://bjxyv0aonstdc"]

[ext_resource type="Script" uid="uid://bwemfh8waemsp" path="res://Scripts/time_hud.gd" id="1_vypku"]
[ext_resource type="AudioStream" uid="uid://bth641rduq30i" path="res://Asset/sound/cave theme.mp3" id="2_ile8r"]
[ext_resource type="AudioStream" uid="uid://b7m0nkuiaamn1" path="res://Asset/sound/dark.soundwave.wav" id="3_g0q32"]

[node name="TimeHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vypku")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 516.0
offset_top = 2.0
offset_right = 651.0
offset_bottom = 33.0
theme_override_font_sizes/font_size = 24
text = "Time Left"

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
offset_left = 505.0
offset_top = 35.0
offset_right = 667.0
offset_bottom = 54.0
max_value = 80.0
step = 1.0
value = 80.0
show_percentage = false

[node name="timevalue" type="Label" parent="."]
layout_mode = 2
offset_left = 506.0
offset_top = 35.0
offset_right = 668.0
offset_bottom = 65.0
text = "120 s"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[node name="CaveTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ile8r")
pitch_scale = 0.7
autoplay = true

[node name="Dark_soundwave" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_g0q32")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
